--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* Variables */
+
+:root {
+  --background-color: black;
+  --foreground-color: white;
+}
+
 /* Use box-sizing */
 
 *,
@@ -18,6 +25,8 @@ body {
   line-height: 1.5;
   font-family: sans-serif;
   display: flex;
+  background-color: var(--background-color);
+  color: var(--foreground-color);
 }
 
 /* Remove built-in form typography styles */
@@ -72,15 +81,15 @@ small {
 }
 
 .border {
-  border: 1px solid #000;
+  border: 1px solid var(--foreground-color);
 }
 
 .border-bottom {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid var(--foreground-color);
 }
 
 .border-right {
-  border-right: 1px solid #000;
+  border-right: 1px solid var(--foreground-color);
 }
 
 /* Sizing */
@@ -95,12 +104,12 @@ small {
 
 /* Backgrounds */
 .bg-black {
-  background-color: #000;
-  color: white;
+  background-color: var(--foreground-color);
+  color: var(--background-color);
 }
 
 .bg-white {
-  background-color: #fff;
+  background-color: var(--background-color);
 }
 
 /* Circle */
@@ -109,7 +118,7 @@ small {
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 50%;
-  border: 2px solid #000;
+  border: 2px solid var(--foreground-color);
   display: inline-block;
   display: flex;
   justify-content: center;
@@ -125,6 +134,12 @@ small {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+/* Icons */
+
+.icon {
+  fill: var(--foreground-color);
 }
 
 /* SortableJS styling for the element about to be dropped */
