Use card component

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* Variables */
 
 :root {
-  --background-color: black;
-  --foreground-color: white;
+  --background-color: #5f4b8b;
+  --foreground-color: #e69a8d;
 }
 
 /* Use box-sizing */
