--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ small {
   display: flex;
 }
 
+.flex-column {
+  flex-direction: column;
+}
+
 .align-items-center {
   align-items: center;
 }
@@ -82,6 +86,10 @@ small {
 
 .border {
   border: 1px solid var(--foreground-color);
+}
+
+.border-top {
+  border-top: 1px solid var(--foreground-color);
 }
 
 .border-bottom {
