--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ small {
   font-size: 0.75rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 /* Flex */
 
 .flex {
@@ -115,6 +119,10 @@ small {
 
 .w-100 {
   width: 100%;
+}
+
+.w-50 {
+  width: 50%;
 }
 
 .w-33 {
